// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getPokemonNames > shall return all cyan pokemon 1`] = `
[
  "CLEFABLE",
  "DODRIO",
  "FERALIGATR",
  "CLEFAIRY",
  "DODUO",
  "TOTODILE",
  "CROCONAW",
  "CLEFFA",
  "MUDKIP",
  "SWABLU",
  "BLASTOISE",
  "FARFETCHD",
  "QUAGSIRE",
  "DELIBIRD",
  "COMFEY",
  "CRAMORANT",
  "QUAXWELL",
  "SQUIRTLE",
  "WARTORTLE",
  "WOOPER",
  "QUAXLY",
  "WIGGLYTUFF",
  "GOLDUCK",
  "SLOWBRO",
  "VAPOREON",
  "SLOWKING",
  "SUICUNE",
  "TOGEKISS",
  "BRAVIARY",
  "SYLVEON",
  "JIGGLYPUFF",
  "PSYDUCK",
  "SLOWPOKE",
  "IGGLYBUFF",
  "TOGEPI",
  "TOGETIC",
  "RUFFLET",
]
`;

exports[`getPokemonNames > shall return all lapis pokemon 1`] = `
[
  "PRIMEAPE",
  "MEGANIUM",
  "BLAZIKEN",
  "MUSHARNA",
  "MANKEY",
  "CHIKORITA",
  "BAYLEEF",
  "COMBUSKEN",
  "MUNNA",
  "VENUSAUR",
  "VICTREEBEL",
  "MR_MIME",
  "BEWEAR",
  "FLORAGATO",
  "QUAQUAVAL",
  "BULBASAUR",
  "IVYSAUR",
  "BELLSPROUT",
  "WEEPINBELL",
  "MIME_JR",
  "STUFFUL",
  "SPRIGATITO",
  "ESPEON",
  "WOBBUFFET",
  "SCEPTILE",
  "GARDEVOIR",
  "LUCARIO",
  "LEAFEON",
  "GALLADE",
  "CRESSELIA",
  "TREECKO",
  "GROVYLE",
  "RALTS",
  "KIRLIA",
  "WYNAUT",
  "RIOLU",
]
`;

exports[`getPokemonNames > shall return all pokemon by default 1`] = `
[
  "BUTTERFREE",
  "RATICATE",
  "ARBOK",
  "PIKACHU_HALLOWEEN",
  "RAICHU",
  "CLEFABLE",
  "NINETALES",
  "NINETALES_ALOLAN",
  "PRIMEAPE",
  "DODRIO",
  "ONIX",
  "MAROWAK",
  "MEGANIUM",
  "TYPHLOSION",
  "FERALIGATR",
  "STEELIX",
  "HOUNDOOM",
  "BLAZIKEN",
  "SWAMPERT",
  "VIGOROTH",
  "SLAKING",
  "ALTARIA",
  "BANETTE",
  "WALREIN",
  "WEAVILE",
  "MUSHARNA",
  "CATERPIE",
  "METAPOD",
  "RATTATA",
  "EKANS",
  "PIKACHU",
  "CLEFAIRY",
  "VULPIX",
  "VULPIX_ALOLAN",
  "MANKEY",
  "DODUO",
  "CUBONE",
  "EEVEE_HOLIDAY",
  "CHIKORITA",
  "BAYLEEF",
  "CYNDAQUIL",
  "QUILAVA",
  "TOTODILE",
  "CROCONAW",
  "PICHU",
  "CLEFFA",
  "SNEASEL",
  "HOUNDOUR",
  "TORCHIC",
  "COMBUSKEN",
  "MUDKIP",
  "MARSHTOMP",
  "SLAKOTH",
  "SWABLU",
  "SHUPPET",
  "SPHEAL",
  "SEALEO",
  "MUNNA",
  "VENUSAUR",
  "CHARIZARD",
  "BLASTOISE",
  "DUGTRIO",
  "VICTREEBEL",
  "GOLEM",
  "FARFETCHD",
  "GENGAR",
  "KANGASKHAN",
  "MR_MIME",
  "PINSIR",
  "DITTO",
  "DRAGONITE",
  "QUAGSIRE",
  "DELIBIRD",
  "BLISSEY",
  "PUPITAR",
  "TYRANITAR",
  "MAWILE",
  "AGGRON",
  "ABSOL",
  "LUXRAY",
  "TOXICROAK",
  "ABOMASNOW",
  "VIKAVOLT",
  "BEWEAR",
  "COMFEY",
  "CRAMORANT",
  "FLORAGATO",
  "MEOWSCARADA",
  "CROCALOR",
  "SKELEDIRGE",
  "QUAXWELL",
  "QUAQUAVAL",
  "CLODSIRE",
  "BULBASAUR",
  "IVYSAUR",
  "CHARMANDER",
  "CHARMELEON",
  "SQUIRTLE",
  "WARTORTLE",
  "DIGLETT",
  "BELLSPROUT",
  "WEEPINBELL",
  "GEODUDE",
  "GRAVELER",
  "GASTLY",
  "HAUNTER",
  "CHANSEY",
  "DRATINI",
  "DRAGONAIR",
  "WOOPER",
  "WOOPER_PALDEAN",
  "LARVITAR",
  "ARON",
  "LAIRON",
  "SHINX",
  "LUXIO",
  "MIME_JR",
  "HAPPINY",
  "CROAGUNK",
  "SNOVER",
  "GRUBBIN",
  "CHARJABUG",
  "STUFFUL",
  "SPRIGATITO",
  "FUECOCO",
  "QUAXLY",
  "WIGGLYTUFF",
  "PERSIAN",
  "GOLDUCK",
  "ARCANINE",
  "SLOWBRO",
  "VAPOREON",
  "JOLTEON",
  "FLAREON",
  "AMPHAROS",
  "SUDOWOODO",
  "ESPEON",
  "UMBREON",
  "SLOWKING",
  "WOBBUFFET",
  "HERACROSS",
  "RAIKOU",
  "ENTEI",
  "SUICUNE",
  "SCEPTILE",
  "GARDEVOIR",
  "SABLEYE",
  "PLUSLE",
  "MINUN",
  "SWALOT",
  "DRIFBLIM",
  "HONCHKROW",
  "LUCARIO",
  "MAGNEZONE",
  "TOGEKISS",
  "LEAFEON",
  "GLACEON",
  "GALLADE",
  "CRESSELIA",
  "BRAVIARY",
  "SYLVEON",
  "DEDENNE",
  "MIMIKYU",
  "PAWMOT",
  "PIKACHU_HOLIDAY",
  "JIGGLYPUFF",
  "MEOWTH",
  "PSYDUCK",
  "GROWLITHE",
  "SLOWPOKE",
  "MAGNEMITE",
  "MAGNETON",
  "EEVEE",
  "IGGLYBUFF",
  "TOGEPI",
  "TOGETIC",
  "MAREEP",
  "FLAAFFY",
  "MURKROW",
  "TREECKO",
  "GROVYLE",
  "RALTS",
  "KIRLIA",
  "GULPIN",
  "WYNAUT",
  "BONSLY",
  "DRIFLOON",
  "RIOLU",
  "RUFFLET",
  "PAWMI",
  "PAWMO",
  "DARKRAI",
]
`;

exports[`getPokemonNames > shall return all pokemon for multiple islands 1`] = `
[
  "RATICATE",
  "PIKACHU_HALLOWEEN",
  "RAICHU",
  "CLEFABLE",
  "NINETALES",
  "NINETALES_ALOLAN",
  "PRIMEAPE",
  "DODRIO",
  "ONIX",
  "MAROWAK",
  "MEGANIUM",
  "TYPHLOSION",
  "FERALIGATR",
  "STEELIX",
  "HOUNDOOM",
  "BLAZIKEN",
  "SWAMPERT",
  "VIGOROTH",
  "SLAKING",
  "BANETTE",
  "WALREIN",
  "WEAVILE",
  "MUSHARNA",
  "RATTATA",
  "PIKACHU",
  "CLEFAIRY",
  "VULPIX",
  "VULPIX_ALOLAN",
  "MANKEY",
  "DODUO",
  "CUBONE",
  "EEVEE_HOLIDAY",
  "CHIKORITA",
  "BAYLEEF",
  "CYNDAQUIL",
  "QUILAVA",
  "TOTODILE",
  "CROCONAW",
  "PICHU",
  "CLEFFA",
  "SNEASEL",
  "HOUNDOUR",
  "TORCHIC",
  "COMBUSKEN",
  "MUDKIP",
  "MARSHTOMP",
  "SLAKOTH",
  "SWABLU",
  "SHUPPET",
  "SPHEAL",
  "SEALEO",
  "MUNNA",
  "VENUSAUR",
  "CHARIZARD",
  "BLASTOISE",
  "DUGTRIO",
  "VICTREEBEL",
  "GOLEM",
  "FARFETCHD",
  "GENGAR",
  "KANGASKHAN",
  "MR_MIME",
  "DITTO",
  "QUAGSIRE",
  "DELIBIRD",
  "BLISSEY",
  "PUPITAR",
  "TYRANITAR",
  "MAWILE",
  "AGGRON",
  "ABSOL",
  "LUXRAY",
  "ABOMASNOW",
  "BEWEAR",
  "COMFEY",
  "CRAMORANT",
  "FLORAGATO",
  "MEOWSCARADA",
  "CROCALOR",
  "SKELEDIRGE",
  "QUAXWELL",
  "QUAQUAVAL",
  "BULBASAUR",
  "IVYSAUR",
  "CHARMANDER",
  "CHARMELEON",
  "SQUIRTLE",
  "WARTORTLE",
  "DIGLETT",
  "BELLSPROUT",
  "WEEPINBELL",
  "GEODUDE",
  "GRAVELER",
  "GASTLY",
  "HAUNTER",
  "CHANSEY",
  "WOOPER",
  "LARVITAR",
  "ARON",
  "LAIRON",
  "SHINX",
  "LUXIO",
  "MIME_JR",
  "HAPPINY",
  "SNOVER",
  "STUFFUL",
  "SPRIGATITO",
  "FUECOCO",
  "QUAXLY",
  "WIGGLYTUFF",
  "PERSIAN",
  "GOLDUCK",
  "ARCANINE",
  "SLOWBRO",
  "VAPOREON",
  "JOLTEON",
  "FLAREON",
  "AMPHAROS",
  "SUDOWOODO",
  "ESPEON",
  "UMBREON",
  "SLOWKING",
  "WOBBUFFET",
  "RAIKOU",
  "ENTEI",
  "SUICUNE",
  "SCEPTILE",
  "GARDEVOIR",
  "SABLEYE",
  "PLUSLE",
  "MINUN",
  "DRIFBLIM",
  "HONCHKROW",
  "LUCARIO",
  "MAGNEZONE",
  "TOGEKISS",
  "LEAFEON",
  "GLACEON",
  "GALLADE",
  "CRESSELIA",
  "BRAVIARY",
  "SYLVEON",
  "DEDENNE",
  "MIMIKYU",
  "PAWMOT",
  "PIKACHU_HOLIDAY",
  "JIGGLYPUFF",
  "MEOWTH",
  "PSYDUCK",
  "GROWLITHE",
  "SLOWPOKE",
  "MAGNEMITE",
  "MAGNETON",
  "EEVEE",
  "IGGLYBUFF",
  "TOGEPI",
  "TOGETIC",
  "MAREEP",
  "FLAAFFY",
  "MURKROW",
  "TREECKO",
  "GROVYLE",
  "RALTS",
  "KIRLIA",
  "WYNAUT",
  "BONSLY",
  "DRIFLOON",
  "RIOLU",
  "RUFFLET",
  "PAWMI",
  "PAWMO",
  "DARKRAI",
]
`;

exports[`getPokemonNames > shall return all power plant pokemon 1`] = `
[
  "PIKACHU_HALLOWEEN",
  "RAICHU",
  "STEELIX",
  "BANETTE",
  "PIKACHU",
  "PICHU",
  "SHUPPET",
  "GENGAR",
  "MAWILE",
  "AGGRON",
  "LUXRAY",
  "SKELEDIRGE",
  "GASTLY",
  "HAUNTER",
  "ARON",
  "LAIRON",
  "SHINX",
  "LUXIO",
  "JOLTEON",
  "AMPHAROS",
  "RAIKOU",
  "PLUSLE",
  "MINUN",
  "DRIFBLIM",
  "MAGNEZONE",
  "DEDENNE",
  "MIMIKYU",
  "PAWMOT",
  "PIKACHU_HOLIDAY",
  "MAGNEMITE",
  "MAGNETON",
  "MAREEP",
  "FLAAFFY",
  "DRIFLOON",
  "PAWMI",
  "PAWMO",
]
`;

exports[`getPokemonNames > shall return all snowdrop pokemon 1`] = `
[
  "RATICATE",
  "NINETALES_ALOLAN",
  "HOUNDOOM",
  "VIGOROTH",
  "SLAKING",
  "WALREIN",
  "WEAVILE",
  "RATTATA",
  "VULPIX_ALOLAN",
  "EEVEE_HOLIDAY",
  "SNEASEL",
  "HOUNDOUR",
  "SLAKOTH",
  "SPHEAL",
  "SEALEO",
  "KANGASKHAN",
  "DITTO",
  "BLISSEY",
  "TYRANITAR",
  "ABSOL",
  "ABOMASNOW",
  "MEOWSCARADA",
  "CHANSEY",
  "HAPPINY",
  "SNOVER",
  "PERSIAN",
  "UMBREON",
  "SABLEYE",
  "HONCHKROW",
  "GLACEON",
  "MEOWTH",
  "EEVEE",
  "MURKROW",
  "DARKRAI",
]
`;

exports[`getPokemonNames > shall return all taupe pokemon 1`] = `
[
  "NINETALES",
  "ONIX",
  "MAROWAK",
  "TYPHLOSION",
  "SWAMPERT",
  "VULPIX",
  "CUBONE",
  "CYNDAQUIL",
  "QUILAVA",
  "TORCHIC",
  "MARSHTOMP",
  "CHARIZARD",
  "DUGTRIO",
  "GOLEM",
  "PUPITAR",
  "CROCALOR",
  "CHARMANDER",
  "CHARMELEON",
  "DIGLETT",
  "GEODUDE",
  "GRAVELER",
  "LARVITAR",
  "FUECOCO",
  "ARCANINE",
  "FLAREON",
  "SUDOWOODO",
  "ENTEI",
  "GROWLITHE",
  "BONSLY",
]
`;
